service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swagger-ui-service
  namespace: swagger-ui
spec:
  selector:
    app: swagger-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
