ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swagger-ui-ingress
  namespace: swagger-ui
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: swagger.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: swagger-ui-service
                port:
                  number: 80
